# rosettastone

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEVLOG.md  Dockerfile  Dockerfile.slim  HANDOFF.md  LICENSE  Makefile  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml  tailwind.config.js
.github/actions/rosettastone-migrate/: action.yml  run.py
.github/workflows/: ci.yml  migration-check.yml  publish.yml
alembic/: env.py
alembic/versions/: 1a58d561a346_add_unique_constraint_approval_workflow_.py  7f21b03d2b42_initial_schema.py  a1b2c3d4e5f6_production_readiness_v1.py  b7c8d9e0f1a2_add_dataset_generation_runs.py  c1d2e3f4a5b6_add_gepa_iterations.py  c39645f955dc_initial_schema.py  d2e3f4a5b6c7_add_failure_reason_to_test_cases.py  d4e5f6a7b8c9_add_token_tracking_columns.py  e5f6a7b8c9d0_add_optimization_score_history.py  fc47a11b96ba_merge_monitoring_and_observability_.py
assets/stitch/: rosettastone-stitch-briefing-branded.md  rosettastone-ui-vision-branded.md  rosettastone-ui-vision.md
assets/stitch/combined_alerts_hub/: code.html
assets/stitch/cost_overview_optimization/: code.html
assets/stitch/diff_view_slide_over/: code.html
assets/stitch/executive_migration_report_light_mode/: code.html
assets/stitch/migration_detail_do_not_ship/: code.html
data/meridian_knowledge_base/: api_authentication.md  api_data_ingestion.md  api_query_endpoints.md  api_rate_limits.md  askmeridian_nlq.md  automated_reports.md  billing_faq.md  dashboard_builder.md  data_encryption.md  data_governance_module.md  data_source_connectors.md  getting_started.md  hipaa_compliance.md  pricing_tiers.md  product_overview.md  pto_policy.md  realtime_streaming.md  release_notes_2024q4.md  release_notes_2025q1.md  remote_work_policy.md  security_overview.md  sso_setup.md  troubleshooting_ingestion.md  troubleshooting_performance.md  usage_limits.md
docs/: production-roadmap.md  rosettastone-build-document.md  rosettastone-folder-structure.md  tier2-plan.md
docs/reviews/: .active-prompt-product.md  2026-04-06-product-review.md
e2e_manifests/: all_scenarios.yaml  smoke.yaml
examples/: migration_config.yaml  ollama_sample_data.jsonl  quickstart.py  sample_data.jsonl  sample_pipeline.yaml
scripts/: backup.sh  calibrate_thresholds.py  dataset_cost_client.py  docker-smoke-test.sh  fix_sql_quality.py  generate_calibration_pairs.py  generate_ecommerce_products.py  generate_enterprise_rag.py  generate_fintech_extraction.py  generate_sql_generation.py  restore.sh  shadow_proxy.py
src/rosettastone/: __init__.py  batch.py  config.py
tests/: TEST_PLAN.md  conftest.py  conftest_strategies.py  factories.py  test_alembic.py  test_batch.py  test_packaging.py  test_pii_invariant.py  test_scripts.py
tests/cassettes/: test_improvement_scorer_returns_score.yaml  test_llm_judge_score_parsing.yaml  test_narrative_generates_text.yaml
tests/fixtures/: __init__.py  pii_adversarial.json  shadow_log.jsonl
tests/test_calibration/: test_calibrator.py  test_calibrator_properties.py  test_collector.py  test_types.py
tests/test_cli/: test_ci_output.py  test_commands.py  test_display.py
tests/test_cluster/: test_embedder.py
tests/test_core/: test_context.py  test_cost_guardrails.py  test_cost_tracking.py  test_deprecations.py  test_migrator.py  test_pipeline.py  test_regressions.py
tests/test_decision/: test_ab_stats.py  test_ab_stats_properties.py  test_recommendation.py  test_statistics.py
tests/test_e2e/: conftest.py  sse_test_app.py  test_cross_provider.py  test_model_downgrade.py  test_model_pairs.py  test_model_upgrade.py  test_ollama_migration.py  test_playwright_ui.py  test_ray_migration.py  test_smoke.py  test_sse_progress.py
tests/test_evaluate/: test_bertscore.py  test_composite.py  test_embedding.py  test_exact_match.py  test_json_fence_stripping.py  test_json_structural.py  test_json_validator.py  test_llm_judge.py  test_llm_judge_vcr.py  test_multi_run.py  test_output_types.py
tests/test_ingest/: test_braintrust_adapter.py  test_csv_adapter.py  test_jsonl.py  test_langsmith_adapter.py  test_otel_adapter.py  test_redis_adapter.py  test_redis_formats.py  test_redis_integration.py  test_schema.py  test_splitter.py  test_splitter_properties.py
tests/test_integration/: test_full_pipeline.py  test_phase2_pipeline.py
tests/test_optimize/: test_dspy_contract.py  test_dspy_program.py  test_feedback.py  test_gepa.py  test_gepa_timeout.py  test_improvement.py  test_improvement_properties.py  test_improvement_vcr.py  test_metric.py  test_mipro.py  test_pipeline_config.py  test_pipeline_optimizer.py  test_teacher_student.py
tests/test_preflight/: test_capabilities.py  test_cost_estimator.py  test_deprecation_checks.py  test_token_budget.py
tests/test_report/: test_executive_prompt.py  test_html_generator.py  test_markdown.py  test_narrative.py  test_narrative_vcr.py  test_pdf_generator.py  test_report_contracts.py  test_report_rendering.py
tests/test_safety/: __init__.py  test_pii_properties.py  test_pii_scanner.py  test_presidio_engine.py  test_presidio_integration.py  test_prompt_auditor.py
tests/test_server/: PLAYWRIGHT_TEST_PLAN.md  conftest.py  test_ab_runner_e2e.py  test_api_ab_testing.py  test_api_alerts.py  test_api_annotations.py  test_api_approvals.py  test_api_audit.py  test_api_comparisons.py  test_api_costs.py  test_api_isolation.py  test_api_migrations.py  test_api_models.py  test_api_pipelines.py  test_api_reports.py  test_api_shadow.py  test_api_sse.py  test_api_tasks.py  test_api_teams.py  test_api_users.py  test_api_versioning.py  test_app.py  test_audit_idor.py  test_auth_csrf.py  test_auth_jwt.py  test_auth_utils.py  test_checkpointing.py  test_database_wal.py  test_dataset_runs.py  test_gepa_iterations.py  test_health_probes.py  test_jwt_validation.py  test_latency_cost.py  test_logging.py  test_metrics.py  test_migration_idor.py  test_negative_stress.py  test_p5_polish.py  test_pipeline_runner.py  test_playwright_ui.py  (+7 more)
tests/test_shadow/: test_evaluator.py  test_log_format.py  test_proxy.py
(+203 files in other folders)
