[project]
name = "rosettastone"
version = "0.1.0"
description = "Automated LLM model migration using production data and GEPA optimization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.14"
dependencies = [
    "dspy>=2.6",
    "litellm>=1.50",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "jinja2>=3.1",
    "rich>=13.0",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
eval = [
    "bert-score>=0.3.13",
    "sentence-transformers>=3.0",
]
redis = [
    "redis[hiredis]>=5.0",
    "redisvl>=0.3",
]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlmodel>=0.0.16",
    "httpx>=0.27",
]
all = [
    "rosettastone[eval,redis,web]",
]
e2e = [
    "rosettastone[eval,redis,web]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
    "rosettastone[web]",
]

[project.scripts]
rosettastone = "rosettastone.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rosettastone"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]  # Allow longer lines in test files (docstrings)

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "playwright: marks tests as Playwright end-to-end UI tests (deselect with '-m not playwright')",
    "e2e: end-to-end tests requiring real APIs and Redis (deselect with '-m not e2e')",
]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["dspy", "dspy.*", "bert_score", "bert_score.*", "sentence_transformers", "sentence_transformers.*", "litellm", "litellm.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "playwright>=1.58.0",
]
