[project]
name = "rosettastone-llm"
version = "0.1.0"
description = "Automated LLM model migration tool"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "RosettaStone Contributors"}]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "dspy>=2.6",
    "litellm>=1.50",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "jinja2>=3.1",
    "rich>=13.0",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
eval = [
    "bert-score>=0.3.13",
    "sentence-transformers>=3.0",
]
redis = [
    "redis[hiredis]>=5.0",
    "redisvl>=0.3",
]
rq = [
    "rq>=1.16",
    "redis>=5.0",
]
braintrust = [
    "braintrust",
]
langsmith = [
    "langsmith",
]
safety = [
    "presidio-analyzer>=2.0",
    "presidio-anonymizer>=2.0",
]
clustering = [
    "scikit-learn>=1.0",
]
postgres = [
    "psycopg[binary]>=3.1",
]
metrics = [
    "prometheus-client>=0.20",
]
sentry = [
    "sentry-sdk[fastapi]>=2.0",
]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlmodel>=0.0.16",
    "httpx>=0.27",
]
auth = [
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.0,<4.0",
    "pyjwt>=2.8.0",
]
calibration = [
    "scikit-learn>=1.4",
    "krippendorff>=0.6",
]
all = [
    "rosettastone-llm[eval,redis,braintrust,langsmith,safety,clustering,web,postgres,auth,metrics,sentry]",
]
e2e = [
    "rosettastone-llm[eval,redis,braintrust,langsmith,safety,clustering,web]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
    "rosettastone-llm[web]",
]

[project.urls]
"Homepage" = "https://github.com/ashwinchidambaram/rosettastone"
"Bug Tracker" = "https://github.com/ashwinchidambaram/rosettastone/issues"

[project.scripts]
rosettastone = "rosettastone.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rosettastone"]


[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]  # Allow longer lines in test files (docstrings)

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "playwright: marks tests as Playwright end-to-end UI tests (deselect with '-m not playwright')",
    "e2e: end-to-end tests requiring real APIs and Redis (deselect with '-m not e2e')",
    "ollama: tests requiring a local Ollama instance (deselect with '-m not ollama')",
    "ray: tests requiring a Ray cluster (deselect with '-m not ray')",
]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["dspy", "dspy.*", "bert_score", "bert_score.*", "sentence_transformers", "sentence_transformers.*", "litellm", "litellm.*", "braintrust", "braintrust.*", "langsmith", "langsmith.*", "presidio_analyzer", "presidio_analyzer.*", "presidio_anonymizer", "presidio_anonymizer.*", "sklearn", "sklearn.*", "psycopg", "psycopg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["rosettastone.cluster.embedder"]
warn_unused_ignores = false

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "faker>=40.12.0",
    "freezegun>=1.4",
    "hypothesis>=6.100",
    "playwright>=1.58.0",
    "pytest-recording>=0.13",
    "types-pyyaml>=6.0.12.20250915",
]
